2004-02-04  Giulio Eulisse  <giulio.eulisse@cern.ch>

	* test_forking.cc: test for pthreads profiling... 

	* IgSProfPThreadCreateHooks.cc: workaround to enable SIGPROF also
	for spawned threads... It shouldn't be necessary, but it looks
	like it is...

	* IgMProfTreeTextBrowser.cc (dump): "MemProfLib:" references in
	output substituted with "IgProf:".

	* IgSProfTimerHooks.cc (IGUANA_sprof_sigprof_hook): rebroadcasting
	signal to other threads to overcome linux strange behavior when
	using pthreads and signals.

2004-02-03  Giulio Eulisse  <giulio.eulisse@cern.ch>

	* test/BuildFile, test_forking.cc: added test for multithreading support.

	* IgMProfTreeTextBrowser.cc (dump): name is generated on dump() to
	avoid problems with multiple threads.
	(dumpFlatProfile): hopefully, nicer layout with big numbers...

	* IgSProfTimerHooks.cc: added multithread support.

2003-11-17  Giulio Eulisse  <giulio.eulisse@cern.ch>

	* IgMProfAllocation.h (struct IgMProfAllocation): this structure
	is used to keep track of the size of a live allocation and to
	which branch (by storing the end node of the branch) it belongs.

	* test_liveAllocations.cc: new test for live allocations.

	* test/BuildFile: new test for live allocations added.
	
	* IgSProfTimerHooks.cc (IGUANA_sprof_sigprof_hook): now it
	uses the new addCurrentStacktrace API.

	* IgMProfTreeTextBrowser.cc: now supports the use of
	IgMProfTreeRep to keep track of leaks. New filenames:
	memoryPID.flat for the memory profiler, leaksPID.flat for the leak
	report and performancePID.flat for the performance
	profiler. Cosmetic fixes.

	* IgMProfTreeRep.cc, IgMProfTreeRep.h: now the tree can keep track
	of the information about max live heap size. When a new allocation
	is performed, the current allocated memory (in m_count) is
	compared with the maximum found in m_maxCount. If it is bigger,
	m_maxCount is upgraded to the new value. Moreover each live
	allocation is tracked in m_endNodeMap. When a free () occurs, the